tests/toy/neg/000605_mutation.toylang
program a = { a = a == bool a; } .
